--- a/server.cfg
+++ b/server.cfg
@@ -75,7 +75,7 @@ set  sv_master5                                          ""   // In the future..
 //  SERVER LOGGING SETTINGS
 //---------------------------------------------------------
 
-set  g_log                                      "games.log"   // Server logfile name (Default = "games.log")
+set  g_log                                      "log/games.log"   // Server logfile name (Default = "games.log")
 set  g_logsync                                          "1"   // Enables real-time (unbuffered) log writing. Necessarry for 3rd party administration software
 set  g_loghits                                          "0"   // Log every single hit. Creates very big logs. Necessary for proper hit-detection if you use a 3rd party administration software
 set  g_logroll                                          "0"   // If set to 1, creates a new log every now and then: <4 digit number>_<logname>.log -> Leave disabled if using log-parsing additions
